--- a/src/assets/styles/assets/base.scss
+++ b/src/assets/styles/assets/base.scss
@@ -30,7 +30,8 @@ body {
 	overflow-x: hidden;
 	font-size: 14px;
 }
-button{
+button,
+textarea {
   font-family: $default-font;
 
 }
@@ -53,7 +54,7 @@ body input, body textarea {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: $mc;
+  background: #ccc;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
 }
 
@@ -66,25 +67,16 @@ body input, body textarea {
   color: #fff;
 }
 
-::placeholder {
-	color: $mc;
+::placeholder,
+:-moz-placeholder,
+::-webkit-input-placeholder,
+:-ms-input-placeholder,
+::-ms-input-placeholder
+ {
+	color: #CCCFD5;
 }
 
-:-moz-placeholder {
-	color: $mc;
-}
 
-::-webkit-input-placeholder {
-	color: $mc;
-}
-
-:-ms-input-placeholder {
-	color: $mc;
-}
-
-::-ms-input-placeholder {
-	color: $mc;
-}
 
 
 input:-webkit-autofill,
@@ -113,44 +105,20 @@ body *:focus {
   outline: none;
 }
 
-body.focus-tab--enable *:focus {
-  outline-color: #4d90fe;
-  outline-offset: -2px;
-  outline-style: auto;
-  outline-width: 7px;
-}
 
 button:hover,
 a:hover,
 select:hover {
   cursor: pointer;
 }
+button:disabled:hover{
+  cursor: not-allowed;
+}
+button:disabled > *{
+  opacity: 0.3;
+}
 
 
-
-.iti-flag{
-  //background-image: url("../img/flag/flags.png");
-}
-@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
-  .iti-flag{
-    //background-image: url("../img/flag/flags@2x.png");
-  } 
-}
-.intl-tel-input.allow-dropdown .flag-container,.intl-tel-input.separate-dial-code .flag-container{
-  @include to(1200px){
-    left: 5%;
-  }
-}
-.intl-tel-input.allow-dropdown input,
-.intl-tel-input.allow-dropdown input[type=tel],
-.intl-tel-input.allow-dropdown input[type=text],
-.intl-tel-input.separate-dial-code input,
-.intl-tel-input.separate-dial-code input[type=tel],
-.intl-tel-input.separate-dial-code input[type=text]{
-  @include to(1200px){
-    padding-left: 95px
-  } 
-}
 
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
@@ -172,7 +140,7 @@ input[type=number]::-webkit-outer-spin-button {
 .custom-scroll::-webkit-scrollbar-thumb {
 	border-radius: 10px;
 	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
-	background-color: $mc;
+	background-color: #ccc;
 }
 
 .custom-scroll::-webkit-scrollbar {
@@ -185,4 +153,5 @@ input[type=number]::-webkit-outer-spin-button {
 	-webkit-appearance: none;
 	margin: 0;
 }
+
 /*! locomotive-scroll v4.0.6 | MIT License | https://github.com/locomotivemtl/locomotive-scroll */html.has-scroll-smooth{overflow:hidden}html.has-scroll-dragging{-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}.has-scroll-smooth body{overflow:hidden}.has-scroll-smooth [data-scroll-container]{min-height:100vh}[data-scroll-direction=horizontal] [data-scroll-container]{height:100vh;display:inline-block;white-space:nowrap}[data-scroll-direction=horizontal] [data-scroll-section]{display:inline-block;vertical-align:top;white-space:nowrap;height:100%}.c-scrollbar{position:absolute;right:0;top:0;width:11px;height:100%;transform-origin:center right;transition:transform .3s,opacity .3s;opacity:0}.c-scrollbar:hover{transform:scaleX(1.45)}.c-scrollbar:hover,.has-scroll-dragging .c-scrollbar,.has-scroll-scrolling .c-scrollbar{opacity:1}[data-scroll-direction=horizontal] .c-scrollbar{width:100%;height:10px;top:auto;bottom:0;transform:scaleY(1)}[data-scroll-direction=horizontal] .c-scrollbar:hover{transform:scaleY(1.3)}.c-scrollbar_thumb{position:absolute;top:0;right:0;background-color:#000;opacity:.5;width:7px;border-radius:10px;margin:2px;cursor:-webkit-grab;cursor:grab}.has-scroll-dragging .c-scrollbar_thumb{cursor:-webkit-grabbing;cursor:grabbing}[data-scroll-direction=horizontal] .c-scrollbar_thumb{right:auto;bottom:0}
