--- a/src/pug/components/form/form.scss
+++ b/src/pug/components/form/form.scss
@@ -3,17 +3,14 @@
 * input start
 */
 form {
-  margin: 50px;
-  padding-top: 150px;
-  background-color: #8e8e8e;
-  --input-padding: 30px;
+  --input-padding: 23px;
 
 }
 
 .form-field:not(#t) {
   position: relative;
-  margin: 10px 0 10px 0;
-  border: 2px solid rgba(207, 190, 151, 1);
+  margin: 20px 0 37px 0;
+  border: 1px solid rgba(207, 190, 151, 1);
   transition: all 0.3s;
 
   // @include from(1025px) {
@@ -24,7 +21,7 @@ form {
   // }
 }
 
-.input-message {
+[data-animation="focus"] .input-message {
   position: absolute;
   top: 50%;
   left: var(--input-padding);
@@ -43,11 +40,11 @@ form {
 /*  */
 .form-field-input {
   display: flex;
-  width: 296px;
+  width: 100%;
   height: 50px;
 }
 
-.form-field__input {
+[data-animation="focus"] .form-field__input {
   position: absolute;
   top: 0;
   left: 0;
@@ -60,13 +57,33 @@ form {
   background-color: transparent;
   border: none
 }
+[data-animation="none"] .form-field__input {
+  padding-left: var(--input-padding);
+  width: 100%;
+  border: none
+}
+
+
+
+[data-animation="none"] .input-message {
+  position: absolute;
+  left: 0;
+  bottom: -6px;
+  display: flex;
+  width: 100%;
+  min-height: 12px;
+  font-size: 12px;
+  line-height: 100%;
+  transform: translate(0%, 100%);
+
+}
 
 
 [data-field-input][data-status="field--inactive"]:not(#r) {
-  border-color: $mc;
+  border-color: #fff;
 
   .input-message {
-    color: #6AB6B8;
+    color: #fff;
   }
 }
 
@@ -79,10 +96,10 @@ form {
 }
 
 [data-field-input][data-status="field--error"]:not(#r) {
-  border-color: rgb(232, 142, 142);
+  border-color: #EA4041;
 
   .input-message {
-    color: rgb(232, 142, 142);
+    color: #EA4041;
   }
 }
 
@@ -103,3 +120,68 @@ form {
 * input end
 */
 /**********************************/
+
+
+.requaired-block {
+  &-ico {
+    width: 25px;
+    height: 25px;
+
+    svg {
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
+.requaired-block {
+  &__ico {
+    width: 25px;
+    height: 25px;
+
+    svg {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  &__text {
+    font-size: 12px;
+    line-height: 170%;
+    margin: 0px 15px;
+
+
+    color: #BBBEC2;
+  }
+}
+
+.form-textarea {
+  textarea {
+    padding: 17px 23px;
+  margin: 20px 0 37px 0;
+
+    padding-left: var(--input-padding);
+
+    height: 100px;
+    width: 100%;
+    display: flex;
+    background: #FFFFFF;
+    font-size: 14px;
+    line-height: 100%;
+    color: #CCCFD5;
+    border: none;
+  }
+}
+
+.form-field-message {
+  font-size: 16px;
+  line-height: 100%;
+  color: #000000;
+  margin: 10px 0 10px 0;
+}
+
+.requaired-block-ico--position {
+  position: absolute;
+  top: 0;
+  right: 0;
+  pointer-events: none;
+}
