--- a/src/pug/pages/sfera.pug
+++ b/src/pug/pages/sfera.pug
@@ -31,13 +31,15 @@ block content
       .subtitle.bold.black Atmosfera
       .decor
     .sfera-grid-block.yellow-bg
-      .sfera-grid-block__left 
+      .sfera-grid-block__left
+        img(src="./assets/images/sfera/white-pattern.svg").sfera-grid-block__bg
         <iframe src="https://www.youtube.com/embed/LYWyG4refiI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       .sfera-grid-block__right
         .subtitle-small  ATMOSFERA — це високотехнологічна управляюча компанія, яка піклується про комфорт мешканців в усіх будинках, створених компанією SAGA Development.
       .sfera-grid-block__right2 
         +img('sfera/sfera-logo.svg').sfera-logo
-        <span class="bold black">Головна мета ATMOSFERA</span> — надавати високий рівень послуг мешканцям та виконувати їхні запити у максимально короткий термін.
+        p 
+          <span class="bold black">Головна мета ATMOSFERA</span> — надавати високий рівень послуг мешканцям та виконувати їхні запити у максимально короткий термін.
         .text.light-gray Звернутися до фахівців ATMOSFERA можна на всіх етапах —  як після введення будинку в експлуатацію та отримання права власності на квартиру, так і під час проживання у KYЇVPROEKT Citу Space.
   .sfera-part
     .icon-title-decor
