--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -234,4 +234,6 @@
 @import './pages/location.scss';
 @import './pages/ctc.scss';
 @import './pages/sfera.scss';
+@import './pages/gallery.scss';
+@import './pages/about.scss';
 
