--- a/src/assets/styles/pages/sfera.scss
+++ b/src/assets/styles/pages/sfera.scss
@@ -43,7 +43,8 @@
     display: grid;
     grid-template-columns: auto 50%;
     grid-template-rows: repeat(2,auto);
-    column-gap: max(50px, 10%);
+    column-gap: min(50px, 10%);
+    row-gap: 15px;
   }
   &__right2 img {
     grid-area: 1/1/3/1;
