desctop header adaptive

--- a/src/assets/styles/pages/home.scss
+++ b/src/assets/styles/pages/home.scss
@@ -141,17 +141,25 @@
 }
 
 .home-section-contact{
-  padding: 150px 120px;
+  padding: vw(170) vw(350);
   background: #F9F9F9;
+  @include to(1440px){
+    padding: 150px 120px;
+
+  }
 }
 
 .contact-block {
   display: flex;
   align-items: flex-start;
   &__l{
-    padding-bottom: 40px;
-
+    padding-bottom: vw(40);
     border-right: 1px solid #E8E8E8;
+    @include to(1440px){
+      padding-bottom: 40px;
+
+    }
+
   }
 
   &__l,
@@ -162,59 +170,83 @@
 
 .contact-location{
   border-bottom: 1px solid #E8E8E8;
-  margin-bottom: 40px;
+  margin-bottom: vw(40);
+  @include to(1440px){
+    margin-bottom: 40px;
+
+  }
   &__label{
-    font-size: 18px;
+    font-size: vw(36);
     line-height: 100%;
 
     text-transform: uppercase;
 
     color: #000000;
-    margin: 0 0 20px 0px;
+    margin: 0 0 vw(20) 0px;
+    @include to(1440px){
+      margin: 0 0 20px 0px;
+      font-size: 18px;
+    }
   }
   &__adress{
     font-weight: 300;
-    font-size: 24px;
+    font-size: vw(24);
     line-height: 150%;
     color: #000000;
-    margin: 0 0 20px 0px;
+    margin: 0 0 vw(20) 0px;
+    @include to(1440px){
+      font-size: 24px;
+      margin: 0 0 20px 0px;
+
+    }
   }
 }
 
 .home-section-appartments__btn{
-  margin-bottom: 40px;
+  margin-bottom: vw(40);
+  @include to(1440px){
+    margin-bottom: 40px;
+
+  }
 }
 
 .contact-schedule{
   display: flex;
   justify-content: space-between;
-  &-r, &-l{
-    // width: 50%;
-  }
   &-l{
     a{
-      font-size: 18px;
+      font-size: vw(18);
       line-height: lh(30,18);
       text-decoration: none;
       color: #000000;
+      @include to(1440px){
+        font-size: 18px;
+      }
     }
   }
   &__time{
     margin-left: auto;
     li{
       display: flex;
-      font-size: 12px;
+      font-size: vw(16);
       line-height: 170%;
       color: #646464;
+      @include to(1440px){
+        font-size: 12px;
+      }
     }
   }
   &__label{
-    font-size: 18px;
+    font-size: vw(36);
     line-height: 100%;
 
     text-transform: uppercase;
 
     color: #000000;
-    margin: 0 0 20px 0px;
+    margin: 0 0 vw(20) 0px;
+    @include to(1440px) {
+      margin: 0 0 20px 0px;
+      font-size: 18px;
+    }
   }
 }
