--- a/src/pug/layout/main.pug
+++ b/src/pug/layout/main.pug
@@ -40,9 +40,10 @@ html(lang="uk")
 		// END LOADER
 		// START POPUP MODAL
 		include ../includes/popup.pug
+
 		// END POPUP MODAL
-			
 		// -------
+		.toast-wrapper(data-toast-wrapper)
 		// -------
 		// -------
 		// -------
