--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -74,8 +74,8 @@ block content
           .contact-schedule-r
             ul.contact-schedule__time
               li Пн-пт: 09:00-19:00
-              li СБ: 09:00-17:00
-              li ВС: вихідний
+              li Сб: 09:00-17:00
+              li Вс: вихідний
       .contact-block__r
         h5.form-label.home-contact--width Залишились питання?
         form(data-home-contact autocomplete="off").home-contact--width
@@ -106,7 +106,7 @@ block content
                 br
                 | заповнення
             +btn('Надіслати')(type="submit" data-btn-submit).home-contact-btn--size
-        .toast-wrapper(data-toast-wrapper)
+        
 
 
   // -----------------------------------
