--- a/src/assets/styles/assets/interface.scss
+++ b/src/assets/styles/assets/interface.scss
@@ -28,12 +28,16 @@
 .circle-ico{
   padding: 8px;
   display: flex;
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
   justify-content: center;
   align-items: center;
-  border: 1px solid #000;
   border-radius: 50%;
+  @include to(1440px){
+    width: 30px;
+    height: 30px;
+
+  }
   svg{
     width: 100%;
     height: 100%;
@@ -71,13 +75,17 @@
 
   }
   &__text{
-    margin: 0 20px;
+    margin: 0 vw(40);
     font-weight: 500;
-    font-size: 12px;
-    line-height: 12px;
+    font-size: vw(16);
+    line-height: 1em;
     text-align: center;
-
     color: #000000;
+    @include to(1440px){
+      font-size: 12px;
+      margin: 0 20px;
+
+    }
   }
 }
 
@@ -104,12 +112,15 @@
   color: white
 }
 .title{
-  margin-bottom: 50px;
+  margin-bottom: vw(50);
   font-weight: 300;
-  font-size: 48px;
+  font-size: vw(64);
   line-height: 1em;
-  /* identical to box height */
-
   text-align: center;
   text-transform: uppercase;
+  @include to(1440px){
+    margin-bottom: 50px;
+    font-size: 36px;
+  }
+
 }
