--- a/src/assets/styles/assets/vars.scss
+++ b/src/assets/styles/assets/vars.scss
@@ -28,7 +28,7 @@ $color-gray: rgba(233, 233, 233, 1);
 }
 :root {
   --in: cubic-bezier(0.13, 0.81, 0.23, 0.96);
-  --header-h: 80px;
+  --header-h: 100px;
   --color-design: rgba(0, 101, 251, 1);
   --color-technology: rgba(0, 0, 0, 1);
   --color-living: rgba(2, 153, 109, 1);
@@ -36,6 +36,10 @@ $color-gray: rgba(233, 233, 233, 1);
   --color-architecture: rgba(253, 198, 12, 1);
   --color-white: rgba(255, 255, 255, 1);
   --color-gray: rgba(233, 233, 233, 1);
-
+  
   --home-sec-mb: 60px;
+  @include to(1440px){
+    --header-h: 80px;
+
+  }
 }
