--- a/src/assets/styles/header.scss
+++ b/src/assets/styles/header.scss
@@ -11,24 +11,47 @@
   display: flex;
   align-items: center;
   z-index: 5;
+  background-color: #fff;
   &__logo{
     margin-right: auto;
-    width: 130px;
-    height: 50px;
+    width: 186px;
+    height: 70px;
+    @include to(1440px){
+      width: 130px;
+      height: 50px;
+
+    }
   }
   &__social{
     margin: 0 10px;
     display: flex;
     align-items: center;
     li{
-      margin: 0 10px;
+      margin: 0 vw(20);
+      @include to(1440px){
+        margin: 0 10px;
+      }
       
+    }
+  }
+  &__call{
+    svg{
+
+      width: 24px;
+      height: 24px;
+      @include to(1440px){
+        width: 12px;
+        height: 12px;
+      }
     }
   }
   &__call,
   &__lang,
   &__call-form {
-     margin: 0 20px;
+     margin: 0 vw(40);
+     @include to(1440px){
+       margin: 0 20px;
+     }
   }
   &__menu{
     display: flex;
@@ -39,11 +62,13 @@
 .header-menu{
   &__text{
     margin-right: 20px;
-    font-size: 10px;
+    font-size: vw(14);
     line-height: 10px;
     text-transform: uppercase;
-
     color: #000000;
+    @include to(1440px){
+      font-size: 10px;
+    }
   }
   &__burg{
     display: flex;
