--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,5 +1,5 @@
-@import './assets/vars';  // переменные
 @import './assets/smart-grid';  // mixins smartgrid.js
+@import './assets/vars';  // переменные
 // libraries
 @import './libs';
 
@@ -209,13 +209,17 @@
     max-height: 15px;
   }
   &__text{
-    font-size: 12px;
+    font-size: vw(16);
     line-height: 100%;
-    margin: 0px 0 0 10px;
+    margin: 0px 0 0 vw(20);
     font-weight: 400;
     color: #000000;
     transition: transform 0.6s cubic-bezier(0, 0, 0, 2.01) 0s;
+    @include to(1440px){
+      font-size: 12px;
+      margin: 0px 0 0 10px;
 
+    }
   }
 }
 
