--- a/src/pug/components/lang/lang.scss
+++ b/src/pug/components/lang/lang.scss
@@ -20,14 +20,15 @@
     display: flex;
     font-weight: 500;
     font-size: 10px;
-    line-height: 10px;
+    line-height: 1em;
     color: #BDBDBD;
     transition: all 0.3s;
     transition: transform .7s var(--in),
     opacity .25s;
-
+    
     @include from(1441px) {
-      font-size: max(vh(12, 0.9), 12px);
+      margin: 0 vw(20);
+      font-size: vw(14);
     }
 
     &:hover {
