--- a/src/pug/components/form/form.scss
+++ b/src/pug/components/form/form.scss
@@ -45,7 +45,11 @@ form {
 .form-field-input {
   display: flex;
   width: 100%;
-  height: 50px;
+  height: 60px;
+  @include to(1440px){
+    height: 50px;
+
+  }
 }
 
 [data-animation="focus"] .form-field__input {
@@ -55,16 +59,23 @@ form {
   width: 100%;
   height: 100%;
   font-weight: 500;
-  font-size: 14px;
+  font-size: max(vh(16), 16px);
   color: #000;
   text-indent: var(--input-padding);
   background-color: transparent;
-  border: none
+  border: none;
+  @include to(1440px){
+    font-size: 14px;
+  }
 }
 [data-animation="none"] .form-field__input {
   padding-left: var(--input-padding);
   width: 100%;
-  border: none
+  border: none;
+  font-size: max(vh(12), 12px);
+  @include to(1440px){
+    font-size: 12px;
+  }
 }
 
 
@@ -76,9 +87,12 @@ form {
   display: flex;
   width: 100%;
   min-height: 12px;
-  font-size: 12px;
+  font-size: max(vh(14), 14px);
   line-height: 100%;
   transform: translate(0%, 100%);
+  @include to(1440px) {
+    font-size: 12px;
+  }
 
 }
 
@@ -174,19 +188,20 @@ form {
     width: 100%;
     display: flex;
     background: #FFFFFF;
-    font-size: 14px;
+    font-size: max(vh(16), 16px);
     line-height: 100%;
     color: #CCCFD5;
     border: none;
     @include to(1440px){
       height: 100px;
+      font-size: 14px;
 
     }
   }
 }
 
 .form-field-message {
-  font-size: vw(18);
+  font-size: max(vh(18), 18px);
   line-height: 100%;
   color: #000000;
   margin: vw(18) 0 vw(18) 0;
